<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Sign_Up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_whatsapp" />

        <EditText
            android:id="@+id/textUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="#ECE4E4" />

        <EditText
            android:id="@+id/textEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/enter_email_id"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="#ECE4E4" />

        <EditText
            android:id="@+id/textPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="#ECE4E4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAlreadyHaveAccount"
            android:text="@string/already_have_account"
            android:textColor="@color/white"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_gravity="end"/>

        <Button
            android:id="@+id/BtnSignUp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_google"
                android:hint="@string/google"
                android:textAllCaps="false"
                android:textColorHint="@color/black"
                app:cornerRadius="8dp"
                android:padding="15dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/BtnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"

                android:layout_weight="1"
                android:padding="15dp"
                android:backgroundTint="@color/fb_color"
                android:drawableLeft="@drawable/ic_facebook"
                android:hint="@string/facebook"
                android:textAllCaps="false"
                android:textColorHint="@color/black"
                app:cornerRadius="8dp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSingUpWithPhone"
            android:text="@string/sign_up_with_phone"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_marginTop="15dp"/>


    </LinearLayout>

</LinearLayout>